[package]
name = "sfscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.1"
sf-api = { git = "https://github.com/the-marenga/sf-api", version = "0.0.1" }
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.31"
priority-queue = "1.3.2"
